--- a/index.html
+++ b/index.html
@@ -226,9 +226,10 @@
 							</div>
 							<h2>Experience</h2>
 							<p>
-								Tina-Michelle has been active in dance since the age of two. Initially, she studied Ballet, Tap, Jazz, 
-								Gymnastics, Modern, and Pointe. She later began exploring international rhythms, such as Latin, West 
-								African, Haitian Folkloric, Afro-Cuban, and Bellydance.
+								Tina-Michelle has been active in dance since the age of two. Initially, she 
+								studied Ballet, Tap, Jazz, Gymnastics, Pointe, Modern, and Hip Hop. She later 
+								began exploring international rhythms, such as Latin, West African, Haitian 
+								Folkloric, Afro-Cuban, and Bellydance.
 							</p>
 							<p>
 								Fitness went hand in hand with dance. Participating in both team and individual sports, boot camps, 
@@ -257,21 +258,26 @@
 							</p>
 						</section>
 						<section>
-							<h2>Differentiating Factors</h2>
-							<p>
-								Some of her formal studies ranged from nutrition to the human brain.  Her knowledge helps provide comprehensive understanding in areas that perplex many. 
-							</p>
-							<p>
-								Tina-Michelle’s diverse personal, educational, and professional experiences are insightful when creating plans for a variety of lifestyles. 
-							</p>
-							<p>
-								Her own extensive rehabilitation experiences allow for compassion and tremendous respect for steel resolve.
-							</p>
+							<h2>What Makes Tina-Michelle Unique?</h2>
+							<li>
+								Tina-Michelle’s diverse personal, educational, and professional experiences are
+								insightful when accommodating a variety of lifestyles.
+							</li>
+							<li>	
+								Some of her formal studies ranged from nutrition to the human brain. Her 
+								knowledge helps provide comprehensive understanding in areas that perplex 
+								many.
+							</li>
+							<li>
+								From her own extensive rehabilitation experiences, she is able to fully grasp 
+								what it takes to overcome setbacks. She recognizes steel resolve and does what 
+								it takes to propel her partners onward and upward.
+							</li>
 						</section>
 						<section>
 							<h2>Who Trains With Tina-Michelle?</h2>
 							<p>
-								Tina-Michelle works with anyone who has a desire.  The specialized areas she is sought after are for chronic pain management, post-orthopedic rehabilitation, special conditions, sports 
+								Tina-Michelle works with a wide range of people.  The specialized areas she is sought after include chronic pain management, post-orthopedic rehabilitation, special conditions, sports 
 								conditioning, and dance instruction.
 							</p>
 							<p>
