--- a/index.html
+++ b/index.html
@@ -111,6 +111,11 @@
 			.page-left > .page-inner > section > p > a {
 				color: #b32424 !important;
 			}
+			.unique > li {
+				font-weight: 300;
+				font-size: 16px;
+				list-style-type:square;
+			}
 			/*
 			.splitlayout.open-right {
 				background-repeat: no-repeat !important;
@@ -224,7 +229,7 @@
 								<li>A.A. Business Technology</li>
 								<li>Paralegal Certificate</li>
 							</div>
-							<h2>Experience</h2>
+							<h2>Background</h2>
 							<p>
 								Tina-Michelle has been active in dance since the age of two. Initially, she 
 								studied Ballet, Tap, Jazz, Gymnastics, Pointe, Modern, and Hip Hop. She later 
@@ -253,12 +258,9 @@
 								To facilitate continued progression and achievement, Tina-Michelle collaborates with each individual in an effort to define and redefine goals. Customized programs are meticulously 
 								designed – specific to personal needs. They may include corrective exercise, cognitive fitness, and other relevant tools required for success.
 							</p>
-							<p>
-								A strong foundation is the key to enhancement.  Beyond that, the possibilities are endless.
-							</p>
 						</section>
-						<section>
-							<h2>What Makes Tina-Michelle Unique?</h2>
+						<section class="unique">
+							<h2>What Sets Tina-Michelle Apart?</h2>
 							<li>
 								Tina-Michelle’s diverse personal, educational, and professional experiences are
 								insightful when accommodating a variety of lifestyles.
@@ -287,7 +289,6 @@
 						</section>
 						<section>
 							<h2>Rates</h2>
-							<p>Rates vary depending on number of participants, mileage (15+ miles one way), and frequency.</p>
 							<li>Individual: $125/hour</li>
 							<li>Group: $70/hour (per person)</li>
 							<li>Special Programs: Please contact directly with the details of your request.</li>
