--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 			}
 			.unique > li {
 				font-weight: 300;
-				font-size: 24px;
+				font-size: 24px !important;
 				list-style-type:square;
 			}
 			/*
