More freakin tweaks

--- a/index.html
+++ b/index.html
@@ -259,22 +259,17 @@
 								designed – specific to personal needs. They may include corrective exercise, cognitive fitness, and other relevant tools required for success.
 							</p>
 						</section>
-						<section class="unique">
-							<h2>What Sets Tina-Michelle Apart?</h2>
+						<!--<section class="unique">
+							<h2>Benefits</h2>
 							<li>
-								Tina-Michelle’s diverse personal, educational, and professional experiences are
-								insightful when accommodating a variety of lifestyles.
+								Tina-Michelle’s diverse personal, educational, and professional experiences are insightful when making attainable lifestyle suggestions.
 							</li>
 							<li>	
-								Some of her formal studies ranged from nutrition to the human brain. Her 
-								knowledge helps provide comprehensive understanding in areas that perplex 
-								many.
+								Her formal studies range from nutrition to the human brain. This helps provide comprehensive understanding in areas that perplex many.
 							</li>
 							<li>
-								From her own extensive rehabilitation experiences, she is able to fully grasp 
-								what it takes to overcome setbacks. She recognizes steel resolve and does what 
-								it takes to propel her partners onward and upward.
-							</li>
+								Her own experience with rehabilitation helps to understand the steps to take in overcoming setbacks.
+							</li>-->
 							<br/><br/>
 						</section>
 						<section>
@@ -284,8 +279,8 @@
 								conditioning, and dance instruction.
 							</p>
 							<p>
-								Injured athletes, older adults who wish to maintain their independence, entrepreneurs seeking balance, aspiring performers, anyone determined to reach a health goal... Their 
-								commonality is their determination. They are quality-seekers who value their time and want to maximize their potential.  They are the ones writing the rest of <i>their</i> life story.
+								Injured athletes, older adults who wish to maintain their independence, entrepreneurs seeking balance, aspiring performers, anyone with a health goal... they 
+								all share a sense determination. They are quality-seekers who value their time and want to maximize their potential.  They are the ones writing the rest of <i>their</i> life story.
 							</p>
 						</section>
 						<section>
@@ -302,9 +297,9 @@
 						<section>
 							<h2>Ventures</h2>
 							<p>
-								Initially, Tina-Michelle was a private trainer, but primarily taught her dance-fitness classes publicly.  Demand quickly grew, however, and there became a great deal of crossover 
-								between her public and private sessions.  To accommodate enthusiasts, she evolved Move Your Axis™ into the well-rounded program it is today, offering an array of choices for healthy 
-								lifestyles. 
+								Initially, Tina-Michelle was a private trainer, but primarily taught her dance-fitness classes publicly.  When demand quickly grew, there was a great deal of crossover 
+								between her public and private sessions.  To accommodate enthusiasts, she evolved Move Your Axis&trade; into the well-rounded program it is today, offering an array of choices for 
+								healthy lifestyles. 
 							</p>
 							<p>
 								Move Your Axis&trade; is available <a href="http://live.moveyouraxis.com" target="_blank">live</a> and (soon to be) <a href="http://moveyouraxis.com" target="_blank">virtually</a>.
