More freakin tweaks

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 							<h2>Who Trains With Tina-Michelle?</h2>
 							<p>
 								Tina-Michelle works with a wide range of people. Many seek help with chronic pain management, post-orthopedic rehabilitation, special conditions, sports 
-								conditioning, or dance instruction.
+								conditioning, and/or dance instruction.
 							</p>
 							<p>
 								Injured athletes, older adults who wish to maintain their independence, entrepreneurs seeking balance, aspiring performers, anyone with a health goal... they 
