--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
 						<section>
 							<h2>Who Trains With Tina-Michelle?</h2>
 							<p>
-								Tina-Michelle works with a wide range of people. Many seek help with chronic pain management, post-orthopedic rehabilitation, special conditions, sports 
-								conditioning, and/or dance instruction.
+								Tina-Michelle works with a wide range of people. Many seek help in areas such as chronic pain management, post-orthopedic rehabilitation, special conditions, sports 
+								conditioning, and dance instruction.
 							</p>
 							<p>
 								Injured athletes, older adults who wish to maintain their independence, entrepreneurs seeking balance, aspiring performers, anyone with a health goal... they 
