--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 				list-style: none;
 				margin: 27px 0 0px 0;
 				color: #cee1eb;
+				font-weight: 300 !important;
 			}
 			
 			li.subtitle {
