--- a/index.html
+++ b/index.html
@@ -298,8 +298,9 @@
 						<section>
 							<h2>Ventures</h2>
 							<p>
-								Initially, Tina-Michelle was a private trainer, but primarily taught her dance-fitness classes publicly.  When demand quickly grew, there was a great deal of crossover 
-								between her public and private sessions.  To accommodate enthusiasts, she evolved Move Your Axis&trade; into the well-rounded program it is today, offering an array of choices for 
+								Tina-Michelle is a private trainer, who taught her dance-fitness classes publicly.  When demand quickly grew, there was a great deal of crossover 
+								between her public classes and private sessions.  To accommodate enthusiasts, she evolved Move Your Axis&trade; into the well-rounded program it is today, 
+								offering an array of choices for 
 								healthy lifestyles. 
 							</p>
 							<p>
