--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 							<h2>Contact</h2>
 							<p>info@tina-michelle.com</p>
 						</section>
-						<section>
+						<!--<section>
 							<h2>Ventures</h2>
 							<p>
 								Tina-Michelle is a private trainer, who taught her dance-fitness classes publicly.  When demand quickly grew, there was a great deal of crossover 
@@ -306,7 +306,7 @@
 							<p>
 								Move Your Axis&trade; is available <a href="http://live.moveyouraxis.com" target="_blank">live</a> and (soon to be) <a href="http://moveyouraxis.com" target="_blank">virtually</a>.
 							</p>
-						</section>
+						</section>-->
 						<section>
 							<h2>Writings</h2>
 							<p>Tina-Michelle's articles can be found on <a href="https://medium.com/@RhythmNMovement" target="_blank">https://medium.com/@RhythmNMovement</a></p>
