--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 							</p>
 							<p>
 								Injured athletes, older adults who wish to maintain their independence, entrepreneurs seeking balance, aspiring performers, anyone with a health goal... they 
-								all share a sense determination. They are quality-seekers who value their time and want to maximize their potential.  They are the ones writing the rest of <i>their</i> life story.
+								all share a sense of determination. They are quality-seekers who value their time and want to maximize their potential.  They are the ones writing the rest of <i>their</i> life story.
 							</p>
 						</section>
 						<section>
