--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 						</section>
 						<section>
 							<h2>Availability</h2>
-							<p>The unique Move Your Axis™ Lifestyle Program is exclusively taught by Tina-Michelle and is delivered <a href="http://live.moveyouraxis.com" target="_blank">live</a> and (soon to be) <a href="http://moveyouraxis.com" target="_blank">virtually</a>.</p>
+							<p>The unique Move Your Axis&trade; Lifestyle Program is exclusively taught by Tina-Michelle and is delivered <a href="http://live.moveyouraxis.com" target="_blank">live</a> and (soon to be) <a href="http://early.moveyouraxis.com" target="_blank">virtually</a>.</p>
 						</section>
 						<section>
 							<h2>Contact</h2>
