--- a/index.html
+++ b/index.html
@@ -325,10 +325,10 @@
 							<p>The strength and conditioning experience.  Increase strength, speed, and agility with a balanced, full body workout.  Prime for endurance and fire the right muscles.  Enhance athletic performance and everyday function.</p>
 
 							<h3>Flex Your Axis&trade;</h3>
-							<p>The hybrid of the movement and dance, flexibility, and strength experiences.  Develop balance and stability with a variety of approaches that help execute movements that are more efficient and controlled.  Challenge muscles and improve elasticity and mobility.</p>
+							<p>The hybrid of the movement and dance, flexibility, and resistance training.  Develop balance and stability with a variety of approaches that help execute movements that are more efficient and controlled.  Challenge muscles and improve elasticity and mobility.</p>
 
 							<h3>Fuel Your Axis&trade;</h3>
-							<p>The wellness experience. Uncover tools and resources that facilitate a self-directed lifestyle.  Gain practical skills and awareness of choices in a variety of topics.  Live better.</p>
+							<p>The nutrition and wellness experience. Uncover tools and resources that facilitate a self-directed lifestyle.  Gain practical skills and awareness of choices in a variety of topics.  Live better.</p>
 
 							<h3>Move Your Axis&trade;</h3>
 							<p>The dance-fitness experience.  The dynamic Move Your Axis™ choreography incorporates dance steps from around the world and delivers an assortment of physiological and psychological benefits.  Learn, laugh, and let go.  Move and be moved by the world around you.</p>
@@ -340,14 +340,14 @@
 							<p>The flexibility experience.  Keep The Bod moving through its full range of motion with methods that aid in restoration and recovery.  Stretch muscles and target trigger points.  Come back to your senses.  Renew and rejuvenate.</p>
 						</section>
 						<section>
-							<h2>Who enjoys the Move Your Axis&trade; Lifestyle Program?</h2>
+							<h2>Who enjoys Move Your Axis&trade;?</h2>
 							<p>Athletic ninjas, intellectual explorers, and growth seekers (to name a few). Essentially, anyone who is unsatisfied with stagnation.</p>
 							<p> Move Your Axis&trade; enthusiasts have a thirst for new challenges and mastering missions. For them, it’s 
 							about the journey. They are the ones who want to step out of their comfort zone and into their life.</p>
 						</section>
 						<section>
 							<h2>Availability</h2>
-							<p>The unique Move Your Axis™ Lifestyle Program is exclusively taught by Tina-Michelle and is delivered <a href="http://live.moveyouraxis.com" target="_blank">live</a> and (soon to be) <a href="http://moveyouraxis.com" target="_blank">virtually</a>.</p>
+							<p>This unique program is exclusively taught by Tina-Michelle and is delivered <a href="http://live.moveyouraxis.com" target="_blank">live</a> and (soon to be) <a href="http://moveyouraxis.com" target="_blank">virtually</a>.</p>
 						</section>
 						<section>
 							<h2>Contact</h2>
