--- a/availability/index.html
+++ b/availability/index.html
@@ -2,6 +2,6 @@
 <head><title>availability</title><link rel="stylesheet" type="text/css" href="https://raw.github.com/coreybutler/site-tm/master/static.css"/></head>
 <body>
 <h1 id="availability">Availability</h1>
-<p>Write whatever you want in here.</p>
+<p>anything</p>
 </body>
 </html>
