Published by Tina M.

--- a/availability/index.html
+++ b/availability/index.html
@@ -78,14 +78,307 @@
 <td style="text-align:left">1:00 p.m. - 2:00 p.m.</td>
 </tr>
 <tr>
-<td style="text-align:left">3:</td>
+<td style="text-align:left">2:00 p.m. - 3:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
 </tr>
 </tbody>
 </table>
-<p>p.m. - 4:15 p.m.          |
-| 5:00 p.m. - 5:30 p.m.          |
-| 5:45 p.m. - 6:15 p.m.          |
-| 6:30 p.m. - 7:00 p.m.          |</p>
 <hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Saturday, July 12, 2014</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">6:30 a.m. - 7:30 a.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">2:00 p.m. - 3:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Sunday, July 13, 2014</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">6:00 p.m. - 7:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Monday, July 14, 2014</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">12:00 p.m. - 1:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">1:00 p.m. - 2:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">2:00 p.m. - 3:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Tuesday, July 15, 2014</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">3:00 p.m. - 4:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">6:00 p.m. - 7:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Wednesday, July 16, 2014</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">3:00 p.m. - 4:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">6:00 p.m. - 7:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Thursday, July 17, 2014</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">3:00 p.m. - 4:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">6:00 p.m. - 7:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Friday, July 18, 2014</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">12:00 p.m. - 1:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">1:00 p.m. - 2:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">2:00 p.m. - 3:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Saturday, July 19, 2014</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">2:00 p.m. - 3:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Sunday, July 20, 2014</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">6:00 p.m. - 7:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Monday, July 21, 2014</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">12:00 p.m. - 1:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">1:00 p.m. - 2:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">2:00 p.m. - 3:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Tuesday, July 22, 2014</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">3:00 p.m. - 4:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">6:00 p.m. - 7:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Wednesday, July 23, 2014</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">3:00 p.m. - 4:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">6:00 p.m. - 7:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Thursday, July 24, 2014</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">3:00 p.m. - 4:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">6:00 p.m. - 7:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Friday, July 25, 2014</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">12:00 p.m. - 1:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">1:00 p.m. - 2:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">2:00 p.m. - 3:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Saturday, July 26, 2014</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">2:00 p.m. - 3:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Sunday, July 27, 2014</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">6:00 p.m. - 7:00 p.m.</td>
+</tr>
+</tbody>
+</table>
 </body>
 </html>
