Published by Tina M.

--- a/availability/index.html
+++ b/availability/index.html
@@ -1,7 +1,8 @@
 <html>
 <head><title>availability</title><link rel="stylesheet" type="text/css" href="https://raw.github.com/coreybutler/site-tm/master/static.css"/></head>
 <body>
-<h1 id="available-online-only-central-standard-time-">Available Online Only (Central Standard Time)</h1>
+<h1 id="available-online-only">Available Online Only</h1>
+<h2 id="-central-standard-time-">(Central Standard Time)</h2>
 <h3 id="for-screenings-only-special-program-">For Screenings Only (Special Program):</h3>
 <table>
 <thead>
