--- a/availability/index.html
+++ b/availability/index.html
@@ -2,7 +2,7 @@
 <head><title>availability</title><link rel="stylesheet" type="text/css" href="https://raw.github.com/coreybutler/site-tm/master/static.css"/></head>
 <body>
 <h1 id="available-online-only">Available Online Only</h1>
-<h3 id="-central-standard-time-">(Central Standard Time)</h3>
+<p><em>(Central Standard Time)</em></p>
 <table>
 <thead>
 <tr>
