--- a/availability/index.html
+++ b/availability/index.html
@@ -58,6 +58,15 @@
 </thead>
 <tbody>
 <tr>
+<td style="text-align:left">8:00 a.m. - 8:30 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">8:30 a.m. - 9:00 a.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">9:00 a.m. - 9:30 a.m.</td>
+</tr>
+<tr>
 <td style="text-align:left">5:00 p.m. - 5:30 p.m.</td>
 </tr>
 </tbody>
