--- a/availability/index.html
+++ b/availability/index.html
@@ -2,11 +2,43 @@
 <head><title>availability</title><link rel="stylesheet" type="text/css" href="https://raw.github.com/coreybutler/site-tm/master/static.css"/></head>
 <body>
 <h1 id="available-online-only">Available Online Only</h1>
-<p><em>(Central Standard Time)</em></p>
+<h2 id="-central-standard-time-">(Central Standard Time)</h2>
+<p><em>Please contact info@tina-michelle.com with your preferred time and duration.</em></p>
+<h5 id="note-dates-marked-with-are-available-for-screening-and-move-right-program">Note: Dates marked with (*) are available for Screening and Move Right Program</h5>
+<hr>
 <table>
 <thead>
 <tr>
-<th style="text-align:left">Thursday, June 26, 2014</th>
+<th style="text-align:left">Monday, June 23, 2014</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">12:00 p.m. - 3:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Tuesday, June 24, 2014</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">3:00 p.m. - 4:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">5:00 p.m. - 7:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Thursday, June 26, 2014*</th>
 </tr>
 </thead>
 <tbody>
@@ -14,19 +46,10 @@
 <td style="text-align:left">6:00 a.m. - 6:30 a.m.</td>
 </tr>
 <tr>
-<td style="text-align:left">3:00 p.m. - 3:30 p.m.</td>
+<td style="text-align:left">3:00 p.m. - 4:00 p.m.</td>
 </tr>
 <tr>
-<td style="text-align:left">3:30 p.m. - 4:00 p.m.</td>
-</tr>
-<tr>
-<td style="text-align:left">5:00 p.m. - 5:30 p.m.</td>
-</tr>
-<tr>
-<td style="text-align:left">5:30 p.m. - 6:00 p.m.</td>
-</tr>
-<tr>
-<td style="text-align:left">6:30 p.m. - 7:00 p.m.</td>
+<td style="text-align:left">5:00 p.m. - 7:00 p.m.</td>
 </tr>
 </tbody>
 </table>
@@ -34,18 +57,15 @@
 <table>
 <thead>
 <tr>
-<th style="text-align:left">Saturday, June 28, 2014</th>
+<th style="text-align:left">Saturday, June 28, 2014*</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td style="text-align:left">6:30 a.m. - 7:00 a.m.</td>
+<td style="text-align:left">6:30 a.m. - 9:00 a.m.</td>
 </tr>
 <tr>
-<td style="text-align:left">5:30 p.m. - 6:00 p.m.</td>
-</tr>
-<tr>
-<td style="text-align:left">6:00 p.m. - 6:30 p.m.</td>
+<td style="text-align:left">5:30 p.m. - 6:30 p.m.</td>
 </tr>
 </tbody>
 </table>
@@ -53,18 +73,12 @@
 <table>
 <thead>
 <tr>
-<th style="text-align:left">Sunday, June 29, 2014</th>
+<th style="text-align:left">Sunday, June 29, 2014*</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td style="text-align:left">8:00 a.m. - 8:30 p.m.</td>
-</tr>
-<tr>
-<td style="text-align:left">8:30 a.m. - 9:00 a.m.</td>
-</tr>
-<tr>
-<td style="text-align:left">9:00 a.m. - 9:30 a.m.</td>
+<td style="text-align:left">7:00 a.m. - 11:00 a.m.</td>
 </tr>
 <tr>
 <td style="text-align:left">5:00 p.m. - 5:30 p.m.</td>
@@ -75,21 +89,12 @@
 <table>
 <thead>
 <tr>
-<th style="text-align:left">Friday, July 11, 2014</th>
+<th style="text-align:left">Monday, June 30, 2014</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td style="text-align:left">12:00 p.m. - 1:00 p.m.</td>
-</tr>
-<tr>
-<td style="text-align:left">1:00 p.m. - 2:00 p.m.</td>
-</tr>
-<tr>
-<td style="text-align:left">2:00 p.m. - 3:00 p.m.</td>
-</tr>
-<tr>
-<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
+<td style="text-align:left">12:00 p.m. - 3:00 p.m.</td>
 </tr>
 </tbody>
 </table>
@@ -97,61 +102,7 @@
 <table>
 <thead>
 <tr>
-<th style="text-align:left">Saturday, July 12, 2014</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align:left">6:30 a.m. - 7:30 a.m.</td>
-</tr>
-<tr>
-<td style="text-align:left">2:00 p.m. - 3:00 p.m.</td>
-</tr>
-<tr>
-<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
-</tr>
-</tbody>
-</table>
-<hr>
-<table>
-<thead>
-<tr>
-<th style="text-align:left">Sunday, July 13, 2014</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
-</tr>
-<tr>
-<td style="text-align:left">6:00 p.m. - 7:00 p.m.</td>
-</tr>
-</tbody>
-</table>
-<hr>
-<table>
-<thead>
-<tr>
-<th style="text-align:left">Monday, July 14, 2014</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align:left">12:00 p.m. - 1:00 p.m.</td>
-</tr>
-<tr>
-<td style="text-align:left">1:00 p.m. - 2:00 p.m.</td>
-</tr>
-<tr>
-<td style="text-align:left">2:00 p.m. - 3:00 p.m.</td>
-</tr>
-</tbody>
-</table>
-<hr>
-<table>
-<thead>
-<tr>
-<th style="text-align:left">Tuesday, July 15, 2014</th>
+<th style="text-align:left">Tuesday, July 1, 2014</th>
 </tr>
 </thead>
 <tbody>
@@ -159,10 +110,7 @@
 <td style="text-align:left">3:00 p.m. - 4:00 p.m.</td>
 </tr>
 <tr>
-<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
-</tr>
-<tr>
-<td style="text-align:left">6:00 p.m. - 7:00 p.m.</td>
+<td style="text-align:left">5:00 p.m. - 7:00 p.m.</td>
 </tr>
 </tbody>
 </table>
@@ -170,7 +118,7 @@
 <table>
 <thead>
 <tr>
-<th style="text-align:left">Wednesday, July 16, 2014</th>
+<th style="text-align:left">Wednesday, July 2, 2014</th>
 </tr>
 </thead>
 <tbody>
@@ -178,10 +126,7 @@
 <td style="text-align:left">3:00 p.m. - 4:00 p.m.</td>
 </tr>
 <tr>
-<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
-</tr>
-<tr>
-<td style="text-align:left">6:00 p.m. - 7:00 p.m.</td>
+<td style="text-align:left">5:00 p.m. - 7:00 p.m.</td>
 </tr>
 </tbody>
 </table>
@@ -189,7 +134,7 @@
 <table>
 <thead>
 <tr>
-<th style="text-align:left">Thursday, July 17, 2014</th>
+<th style="text-align:left">Thursday, July 3, 2014</th>
 </tr>
 </thead>
 <tbody>
@@ -197,10 +142,7 @@
 <td style="text-align:left">3:00 p.m. - 4:00 p.m.</td>
 </tr>
 <tr>
-<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
-</tr>
-<tr>
-<td style="text-align:left">6:00 p.m. - 7:00 p.m.</td>
+<td style="text-align:left">5:00 p.m. - 7:00 p.m.</td>
 </tr>
 </tbody>
 </table>
@@ -208,15 +150,137 @@
 <table>
 <thead>
 <tr>
-<th style="text-align:left">Friday, July 18, 2014</th>
+<th style="text-align:left">Thursday, July 3, 2014</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td style="text-align:left">12:00 p.m. - 1:00 p.m.</td>
+<td style="text-align:left">3:00 p.m. - 4:00 p.m.</td>
 </tr>
 <tr>
-<td style="text-align:left">1:00 p.m. - 2:00 p.m.</td>
+<td style="text-align:left">5:00 p.m. - 7:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Saturday, July 5, 2014</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">6:30 a.m. - 8:00 a.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">5:30 p.m. - 6:30 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Sunday, July 6, 2014</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">7:00 a.m. - 9:00 a.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">5:00 p.m. - 5:30 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Monday, July 7, 2014</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">12:00 p.m. - 3:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Tuesday, July 8, 2014</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">3:00 p.m. - 4:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">5:00 p.m. - 7:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Wednesday, July 9, 2014</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">3:00 p.m. - 4:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">5:00 p.m. - 7:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Thursday, July 10, 2014</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">3:00 p.m. - 4:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">5:00 p.m. - 7:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Friday, July 11, 2014*</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">12:00 p.m. - 3:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Saturday, July 12, 2014*</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">6:30 a.m. - 9:15 a.m.</td>
 </tr>
 <tr>
 <td style="text-align:left">2:00 p.m. - 3:00 p.m.</td>
@@ -230,15 +294,15 @@
 <table>
 <thead>
 <tr>
-<th style="text-align:left">Saturday, July 19, 2014</th>
+<th style="text-align:left">Sunday, July 13, 2014*</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td style="text-align:left">2:00 p.m. - 3:00 p.m.</td>
+<td style="text-align:left">7:00 a.m. - 11:00 a.m.</td>
 </tr>
 <tr>
-<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
+<td style="text-align:left">5:00 p.m. - 5:30 p.m.</td>
 </tr>
 </tbody>
 </table>
@@ -246,15 +310,12 @@
 <table>
 <thead>
 <tr>
-<th style="text-align:left">Sunday, July 20, 2014</th>
+<th style="text-align:left">Monday, July 14, 2014*</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
-</tr>
-<tr>
-<td style="text-align:left">6:00 p.m. - 7:00 p.m.</td>
+<td style="text-align:left">12:00 p.m. - 3:00 p.m.</td>
 </tr>
 </tbody>
 </table>
@@ -262,26 +323,7 @@
 <table>
 <thead>
 <tr>
-<th style="text-align:left">Monday, July 21, 2014</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align:left">12:00 p.m. - 1:00 p.m.</td>
-</tr>
-<tr>
-<td style="text-align:left">1:00 p.m. - 2:00 p.m.</td>
-</tr>
-<tr>
-<td style="text-align:left">2:00 p.m. - 3:00 p.m.</td>
-</tr>
-</tbody>
-</table>
-<hr>
-<table>
-<thead>
-<tr>
-<th style="text-align:left">Tuesday, July 22, 2014</th>
+<th style="text-align:left">Wednesday, July 16, 2014*</th>
 </tr>
 </thead>
 <tbody>
@@ -289,10 +331,7 @@
 <td style="text-align:left">3:00 p.m. - 4:00 p.m.</td>
 </tr>
 <tr>
-<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
-</tr>
-<tr>
-<td style="text-align:left">6:00 p.m. - 7:00 p.m.</td>
+<td style="text-align:left">5:00 p.m. - 7:00 p.m.</td>
 </tr>
 </tbody>
 </table>
@@ -300,7 +339,7 @@
 <table>
 <thead>
 <tr>
-<th style="text-align:left">Wednesday, July 23, 2014</th>
+<th style="text-align:left">Thursday, July 17, 2014*</th>
 </tr>
 </thead>
 <tbody>
@@ -308,10 +347,7 @@
 <td style="text-align:left">3:00 p.m. - 4:00 p.m.</td>
 </tr>
 <tr>
-<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
-</tr>
-<tr>
-<td style="text-align:left">6:00 p.m. - 7:00 p.m.</td>
+<td style="text-align:left">5:00 p.m. - 7:00 p.m.</td>
 </tr>
 </tbody>
 </table>
@@ -319,18 +355,15 @@
 <table>
 <thead>
 <tr>
-<th style="text-align:left">Thursday, July 24, 2014</th>
+<th style="text-align:left">Friday, July 18, 2014*</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td style="text-align:left">3:00 p.m. - 4:00 p.m.</td>
+<td style="text-align:left">12:00 p.m. - 3:00 p.m.</td>
 </tr>
 <tr>
 <td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
-</tr>
-<tr>
-<td style="text-align:left">6:00 p.m. - 7:00 p.m.</td>
 </tr>
 </tbody>
 </table>
@@ -338,15 +371,12 @@
 <table>
 <thead>
 <tr>
-<th style="text-align:left">Friday, July 25, 2014</th>
+<th style="text-align:left">Saturday, July 19, 2014*</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td style="text-align:left">12:00 p.m. - 1:00 p.m.</td>
-</tr>
-<tr>
-<td style="text-align:left">1:00 p.m. - 2:00 p.m.</td>
+<td style="text-align:left">6:30 a.m. - 9:15 a.m.</td>
 </tr>
 <tr>
 <td style="text-align:left">2:00 p.m. - 3:00 p.m.</td>
@@ -360,10 +390,106 @@
 <table>
 <thead>
 <tr>
-<th style="text-align:left">Saturday, July 26, 2014</th>
+<th style="text-align:left">Sunday, July 20, 2014*</th>
 </tr>
 </thead>
 <tbody>
+<tr>
+<td style="text-align:left">7:00 a.m. - 11:00 a.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">5:00 p.m. - 5:30 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Monday, July 21, 2014*</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">12:00 p.m. - 3:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Tuesday, July 22, 2014*</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">3:00 p.m. - 4:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">5:00 p.m. - 7:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Wednesday, July 23, 2014*</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">3:00 p.m. - 4:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">5:00 p.m. - 7:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Thursday, July 24, 2014*</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">3:00 p.m. - 4:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">5:00 p.m. - 7:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Friday, July 25, 2014*</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">12:00 p.m. - 3:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">Saturday, July 26, 2014*</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">6:30 a.m. - 9:15 a.m.</td>
+</tr>
 <tr>
 <td style="text-align:left">2:00 p.m. - 3:00 p.m.</td>
 </tr>
@@ -376,15 +502,15 @@
 <table>
 <thead>
 <tr>
-<th style="text-align:left">Sunday, July 27, 2014</th>
+<th style="text-align:left">Sunday, July 27, 2014*</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td style="text-align:left">5:00 p.m. - 6:00 p.m.</td>
+<td style="text-align:left">7:00 a.m. - 11:00 a.m.</td>
 </tr>
 <tr>
-<td style="text-align:left">6:00 p.m. - 7:00 p.m.</td>
+<td style="text-align:left">5:00 p.m. - 5:30 p.m.</td>
 </tr>
 </tbody>
 </table>
