--- a/availability/index.html
+++ b/availability/index.html
@@ -323,6 +323,22 @@
 <table>
 <thead>
 <tr>
+<th style="text-align:left">Tuesday, July 15, 2014</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">3:00 p.m. - 4:00 p.m.</td>
+</tr>
+<tr>
+<td style="text-align:left">5:00 p.m. - 7:00 p.m.</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<table>
+<thead>
+<tr>
 <th style="text-align:left">Wednesday, July 16, 2014*</th>
 </tr>
 </thead>
