--- a/movebetter/index.html
+++ b/movebetter/index.html
@@ -12,7 +12,7 @@
 <p>The list of questions could go on and on.  The point is, it’s really for everybody.  </p>
 <p>From dancers, to athletes, to someone who has never been able to touch his or her toes, part of what I offer in my <a href="http://www.tina-michelle.com">personal training sessions</a> is a movement screen to help identify weaknesses, imbalances, asymmetries, and limitations.  </p>
 <hr>
-<p>Here’s how it’ll work:</p>
+<p>Here’s how it will work:</p>
 <p>1.)    We’ll assess your basic movement patterns during a half hour, one-on-one movement screening.  You’ll receive 3 progressions that you’ll be able to do on your own.  These progressions will be specific to your needs.</p>
 <p>2.)    I’ll offer a 3 week program: <strong>MOVE BETTER</strong>.  These one hour long sessions will include progressions that will continue to be tailored to your needs.  Measurements will be documented and a detailed analysis will be provided to you after our last session.  </p>
 <hr>
@@ -37,13 +37,13 @@
 <p>Thursday, June 26th </p>
 <p>Saturday, June 28th</p>
 <p>Sunday, June 29th</p>
-<h5 id="-availability-will-be-updated-here-http-www-tina-michelle-com-availability-"><strong>AVAILABILITY WILL BE UPDATED <a href="http://www.tina-michelle.com/availability">HERE</a>.</strong></h5>
+<h2 id="-availability-will-be-updated-here-http-www-tina-michelle-com-availability-"><strong>AVAILABILITY WILL BE UPDATED <a href="http://www.tina-michelle.com/availability">HERE</a>.</strong></h2>
 <p>Please contact me directly at tina-michelle@moveyouraxis.com with your preferred time and location.  <strong><em>On-site screenings must be reserved by Sunday, June 22nd.  Online screenings must be reserved by Tuesday, June 24th.</em></strong>  First-come, first-serve.  Tell your friends and family too so you can all take advantage of the special pricing.  Here is the link to <a href="http://www.tina-michelle.com/movebetter">share</a>. </p>
 <hr>
-<h2 id="-3-week-move-better-program-"><strong>3 WEEK MOVE BETTER PROGRAM</strong></h2>
-<h4 id="-3-on-site-semi-private-sessions-2-5-people-120-"><strong>3 ON-SITE SEMI-PRIVATE SESSIONS (2 – 5 people): $120</strong></h4>
+<h1 id="-move-better-program-"><strong>MOVE BETTER PROGRAM</strong></h1>
+<h4 id="-3-on-site-semi-private-sessions-2-5-people-120-per-person-40-per-session-"><strong>3 ON-SITE SEMI-PRIVATE SESSIONS (2 – 5 people): $120 per person ($40 per session)</strong></h4>
+<h4 id="__-3-online-one-on-one-sessions-90-per-person-30-per-session-__"><strong>*3 ONLINE ONE-ON-ONE SESSIONS: $90 per person ($30 per session)</strong></h4>
 <h4 id="__-1-online-one-on-one-session-40__"><strong>*1 ONLINE ONE-ON-ONE SESSION: $40</strong></h4>
-<h4 id="__-3-online-one-on-one-sessions-90__"><strong>*3 ONLINE ONE-ON-ONE SESSIONS: $90</strong></h4>
 <p><strong><em>*Note: For those who wish to train online, please indicate whether you have access to any of the following equipment: foam roller, tennis or lacrosse ball, theraband, the stick, stability ball, medicine ball (weight?), dumbbell (weight?), kettlebell (weight?).  This equipment is not required.</em></strong></p>
 <h2 id="-availability-"><strong>AVAILABILITY:</strong></h2>
 <h4 id="flamencura-music-dance-7113-burnet-road-111-austin-tx-78757-">Flamencura Music &amp; Dance (7113 Burnet Road, #111 Austin, TX 78757)</h4>
