--- a/movebetter/index.html
+++ b/movebetter/index.html
@@ -10,7 +10,7 @@
 <p><strong><em>•    What if the reason I have trouble with changing directions suddenly is because I’m limited in my upper back or my ankle?</em></strong></p>
 <p><strong><em>•    I’d like to execute a flawless pivot turn or keep up with everyone else on the basketball court.</em></strong></p>
 <p>The list of questions could go on and on.  The point is, it’s really for everybody.  </p>
-<p>From dancers, to athletes, to someone who has never been able to touch his or her toes, part of what I offer in my <a href="http://www.tina-michelle.com">personal training sessions</a> is a movement screen to help identify weaknesses, imbalances, asymmetries, and limitations.  </p>
+<p>Whether you are a dancer, triathlete, or someone who has never been able to touch his or her toes, part of what I offer in my <a href="http://www.tina-michelle.com">personal training sessions</a> is a movement screen to help identify weaknesses, imbalances, asymmetries, and limitations.  </p>
 <hr>
 <p>Here’s how it will work:</p>
 <p>1.)    We’ll assess your basic movement patterns during a half hour, one-on-one movement screening.  You’ll receive 3 progressions that you’ll be able to do on your own.  These progressions will be specific to your needs.</p>
