--- a/movebetter/index.html
+++ b/movebetter/index.html
@@ -39,9 +39,9 @@
 <h2 id="-availability-will-be-updated-here-http-www-tina-michelle-com-availability-"><strong>AVAILABILITY WILL BE UPDATED <a href="http://www.tina-michelle.com/availability">HERE</a>.</strong></h2>
 <p>Please contact me directly at tina-michelle@moveyouraxis.com with your preferred time and location.  <strong><em>On-site screenings must be reserved by Sunday, June 22nd.  Online screenings must be reserved by Tuesday, June 24th.</em></strong>  First-come, first-serve.  Tell your friends and family too so you can all take advantage of the special pricing.  Here is the link to <a href="http://www.tina-michelle.com/movebetter">share</a>. </p>
 <hr>
-<p><u></u></p><h1 style="font-weight:900;"><u>MOVE BETTER PROGRAM</u></h1><p></p>
-<h4 id="-3-on-site-semi-private-package-2-5-people-120-per-person-40-per-session-"><strong>3 ON-SITE SEMI-PRIVATE PACKAGE (2 – 5 people): $120 per person ($40 per session)</strong></h4>
-<h4 id="__-3-online-one-on-one-package-90-per-person-30-per-session-__"><strong>*3 ONLINE ONE-ON-ONE PACKAGE: $90 per person ($30 per session)</strong></h4>
+<p><u></u></p><h1 style="font-weight:900;"><u>MOVE BETTER PACKAGES</u></h1><p></p>
+<h4 id="-3-on-site-semi-private-sessions-2-5-people-120-per-person-40-per-session-"><strong>3 ON-SITE SEMI-PRIVATE SESSIONS (2 – 5 people): $120 per person ($40 per session)</strong></h4>
+<h4 id="__-3-online-one-on-one-sessions-90-per-person-30-per-session-__"><strong>*3 ONLINE ONE-ON-ONE SESSIONS: $90 per person ($30 per session)</strong></h4>
 <h4 id="__-1-online-one-on-one-session-40__"><strong>*1 ONLINE ONE-ON-ONE SESSION: $40</strong></h4>
 <p><strong><em>*Note: For those who wish to train online, please indicate whether you have access to any of the following equipment: foam roller, tennis or lacrosse ball, theraband, the stick, stability ball, medicine ball (weight?), dumbbell (weight?), kettlebell (weight?).  This equipment is not required.</em></strong></p>
 <p><strong><em>*Note: For those who wish to train on-site and do not have a group formed, please indicate your preferred time and location and I will help you form a group</em></strong></p>
