--- a/movebetter/index.html
+++ b/movebetter/index.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>Move Better</title><link rel="stylesheet" type="text/css" href="https://raw.github.com/coreybutler/site-tm/master/static.css"/></head>
 <body>
-<p><u></u></p><h1 style="font-weight:900;"><u>MOVE BETTER</u></h1><p></p>
+<h1 id="-move-better-"><strong>MOVE BETTER</strong></h1>
 <p>Have you ever thought any of the following?  </p>
 <p><strong><em>•    Is this nagging pain something I need to see a doctor about or something I can take care of on my own?</em></strong></p>
 <p><strong><em>•    I have a hard time balancing on one leg.  I wonder how I can get better at it.</em></strong></p>
@@ -9,14 +9,14 @@
 <p><strong><em>•    How can I become faster or more powerful?</em></strong></p>
 <p><strong><em>•    What if the reason I have trouble with changing directions suddenly is because I’m limited in my upper back or my ankle?</em></strong></p>
 <p><strong><em>•    I’d like to execute a flawless pivot turn or keep up with everyone else on the basketball court.</em></strong></p>
-<p>The list of questions could go on and on.  The point is, it’s really for everybody - whether you are a dancer, triathlete, or someone who has never been able to touch his or her toes.  </p>
-<p>Part of what I offer in my <a href="http://www.tina-michelle.com">personal training sessions</a> is a movement screen to help identify weaknesses, imbalances, asymmetries, and limitations.  For a limited time, I am offering a special.</p>
+<p>The list of questions could go on and on.  The point is, it’s really for everybody.  </p>
+<p>From dancers, to athletes, to someone who has never been able to touch his or her toes, part of what I offer in my <a href="http://www.tina-michelle.com">personal training sessions</a> is a movement screen to help identify weaknesses, imbalances, asymmetries, and limitations.  </p>
 <hr>
-<p>Here’s how it will work:</p>
+<p>Here’s how it’ll work:</p>
 <p>1.)    We’ll assess your basic movement patterns during a half hour, one-on-one movement screening.  You’ll receive 3 progressions that you’ll be able to do on your own.  These progressions will be specific to your needs.</p>
-<p>2.)    Anyone who has a screening on June 26th, 28th, or 29th will be eligible for the <strong>MOVE BETTER</strong> program that will be offered for 3 weeks in July.  These one hour long sessions will include progressions that will continue to be tailored to your needs.  Measurements will be documented and a detailed analysis will be provided to you after our last session.  </p>
+<p>2.)    I’ll offer a 3 week program: <strong>MOVE BETTER</strong>.  These one hour long sessions will include progressions that will continue to be tailored to your needs.  Measurements will be documented and a detailed analysis will be provided to you after our last session.  </p>
 <hr>
-<p><u></u></p><h1 style="font-weight:900;"><u>SCREENING</u></h1><p></p>
+<h1 id="-screening-"><strong>SCREENING</strong></h1>
 <p><strong>On-site 1/2 hour one-on-one session: $18</strong></p>
 <p><strong>*Online 1/2 hour one-on-one session: $12</strong></p>
 <p><strong><em>*Note: Those who wish to screen online will need access to the following:</em></strong></p>
@@ -25,37 +25,41 @@
 <p>3.) One tape measure</p>
 <p>4.) One 3 – 5 foot long string</p>
 <p>5.) One large towel</p>
-<p><u><b>AVAILABILITY (ON-SITE):</b></u></p>
-<h4 id="-__saturday-june-28th-at-mueller-1311-philomena-street-austin-tx-78723-__-"><em><strong>Saturday, June 28th at Mueller (1311 Philomena Street, Austin, TX 78723)</strong></em></h4>
+<h2 id="-availability-"><strong>AVAILABILITY:</strong></h2>
+<h4 id="on-site">ON-SITE</h4>
+<p><em><strong>Saturday, June 28th at Mueller (1311 Philomena Street, Austin, TX 78723)</strong></em></p>
 <p>8:00 - 9:30 a.m.</p>
 <p>12:00 - 12:30 p.m.</p>
-<h4 id="-__sunday-june-29th-at-pease-park-1100-kingsbury-street-austin-tx-78705-__-"><em><strong>Sunday, June 29th at Pease Park (1100 Kingsbury Street, Austin, TX 78705)</strong></em></h4>
+<p><em><strong>Sunday, June 29th at Pease Park (1100 Kingsbury Street, Austin, TX 78705)</strong></em></p>
 <p>9:00 - 11:00 a.m.</p>
 <p>3:00 - 4:00 p.m.</p>
-<p><u><b>AVAILABILITY (ONLINE):</b></u></p>
+<h4 id="online-">ONLINE:</h4>
 <p>Thursday, June 26th </p>
 <p>Saturday, June 28th</p>
 <p>Sunday, June 29th</p>
-<h2 id="-availability-will-be-updated-here-http-www-tina-michelle-com-availability-"><strong>AVAILABILITY WILL BE UPDATED <a href="http://www.tina-michelle.com/availability">HERE</a>.</strong></h2>
+<h5 id="-availability-will-be-updated-here-http-www-tina-michelle-com-availability-"><strong>AVAILABILITY WILL BE UPDATED <a href="http://www.tina-michelle.com/availability">HERE</a>.</strong></h5>
 <p>Please contact me directly at tina-michelle@moveyouraxis.com with your preferred time and location.  <strong><em>On-site screenings must be reserved by Sunday, June 22nd.  Online screenings must be reserved by Tuesday, June 24th.</em></strong>  First-come, first-serve.  Tell your friends and family too so you can all take advantage of the special pricing.  Here is the link to <a href="http://www.tina-michelle.com/movebetter">share</a>. </p>
 <hr>
-<p><u></u></p><h1 style="font-weight:900;"><u>“MOVE BETTER” PACKAGES</u></h1><p></p>
-<h4 id="-3-on-site-semi-private-sessions-2-5-people-120-per-person-40-per-session-"><strong>3 ON-SITE SEMI-PRIVATE SESSIONS (2 – 5 people): $120 per person ($40 per session)</strong></h4>
-<h4 id="__-3-online-one-on-one-sessions-90-per-person-30-per-session-__"><strong>*3 ONLINE ONE-ON-ONE SESSIONS: $90 per person ($30 per session)</strong></h4>
+<h2 id="-3-week-move-better-program-"><strong>3 WEEK MOVE BETTER PROGRAM</strong></h2>
+<h4 id="-3-on-site-semi-private-sessions-2-5-people-120-"><strong>3 ON-SITE SEMI-PRIVATE SESSIONS (2 – 5 people): $120</strong></h4>
 <h4 id="__-1-online-one-on-one-session-40__"><strong>*1 ONLINE ONE-ON-ONE SESSION: $40</strong></h4>
-<p><strong><em>*Note: For those who wish to train online, please indicate whether you have access to any of the following equipment: foam roller, tennis or lacrosse ball, theraband, the stick, stability ball, medicine ball (weight?), dumbbell (weight?), kettlebell (weight?).  This equipment is not required.</em></strong></p>
-<p><strong><em>*Note: For those who wish to train on-site and do not have a group formed, please indicate your preferred time and location and I will help you form a group</em></strong></p>
-<p><u><b>AVAILABILITY (ON-SITE):</b></u></p>
+<h4 id="__-3-online-one-on-one-sessions-90__"><strong>*3 ONLINE ONE-ON-ONE SESSIONS: $90</strong></h4>
+<p><strong><em>*Note: For those who wish to train online, please indicate whether you have access to any of the following equipment: foam roller, tennis or lacrosse ball, theraband, the stick, stability ball, tubing, medicine ball (weight?), dumbbell (weight?), kettlebell (weight?), other.  This equipment is not required.</em></strong></p>
+<h2 id="-availability-"><strong>AVAILABILITY:</strong></h2>
 <h4 id="flamencura-music-dance-7113-burnet-road-111-austin-tx-78757-">Flamencura Music &amp; Dance (7113 Burnet Road, #111 Austin, TX 78757)</h4>
-<p>Saturdays from 8:15 – 9:15 a.m. (July 12th, 19th, 26th)</p>
-<p>Sundays from 10 – 11 a.m. (July 13th, 20th, 27th)</p>
+<h5 id="-saturdays-from-8-15-9-15-a-m-"><strong>Saturdays from 8:15 – 9:15 a.m.</strong></h5>
+<p><em>(July 12th, 19th, 26th)</em>     </p>
+<h5 id="-sundays-from-10-11-a-m-"><strong>Sundays from 10 – 11 a.m.</strong></h5>
+<p><em>(July 13th, 20th, 27th)</em></p>
 <h4 id="pease-park-1100-kingsbury-street-austin-tx-78705-">Pease Park (1100 Kingsbury Street, Austin, TX 78705)</h4>
-<p>Thursdays from 6:15 – 7:15 p.m. (July 10th, 17th, 24th)</p>
-<p>Saturdays from 8:15 – 9:15 a.m. (July 12th, 19th, 26th)</p>
-<p>Sundays from 10 – 11 a.m. (July 13th, 20th, 27th)</p>
-<p><u><b>AVAILABILITY (ON-LINE):</b></u></p>
-<h4 id="thursday-july-10th-sunday-july-27th-">Thursday, July 10th - Sunday, July 27th.</h4>
-<h2 id="-availability-will-be-updated-here-http-www-tina-michelle-com-availability-"><strong>AVAILABILITY WILL BE UPDATED <a href="http://www.tina-michelle.com/availability">HERE</a>.</strong></h2>
+<h5 id="-thursdays-from-6-15-7-15-p-m-"><strong>Thursdays from 6:15 – 7:15 p.m.</strong></h5>
+<p><em>(July 10th, 17th, 24th)</em></p>
+<h5 id="-saturdays-from-8-15-9-15-a-m-"><strong>Saturdays from 8:15 – 9:15 a.m.</strong></h5>
+<p><em>(July 12th, 19th, 26th)</em>     </p>
+<h5 id="-sundays-from-10-11-a-m-"><strong>Sundays from 10 – 11 a.m.</strong></h5>
+<p><em>(July 13th, 20th, 27th)</em></p>
+<h4 id="online-training-will-be-available-between-thursday-july-10th-and-sunday-july-27th-">Online training will be available between Thursday, July 10th and Sunday, July 27th.</h4>
+<h5 id="-availability-will-be-updated-here-http-www-tina-michelle-com-availability-"><strong>AVAILABILITY WILL BE UPDATED <a href="http://www.tina-michelle.com/availability">HERE</a>.</strong></h5>
 <p>Please contact me directly at tina-michelle@moveyouraxis.com with your preferred time and location.  <strong><em>On-site and online Move Better sessions must be reserved by Wednesday, July 2nd.</em></strong>  First-come, first-serve.</p>
 </body>
 </html>
