--- a/movebetter/index.html
+++ b/movebetter/index.html
@@ -14,7 +14,7 @@
 <hr>
 <p>Here’s how it will work:</p>
 <p>1.)    We’ll assess your basic movement patterns during a half hour, one-on-one movement screening.  You’ll receive 3 progressions that you’ll be able to do on your own.  These progressions will be specific to your needs.</p>
-<p>2.)    I’ll offer a 3 week program: <strong>MOVE BETTER</strong>.  These one hour long sessions will include progressions that will continue to be tailored to your needs.  Measurements will be documented and a detailed analysis will be provided to you after our last session.  </p>
+<p>2.)    Those who have a screening on July 26th, 28th, or 29th will be eligible for the <strong>MOVE BETTER</strong> program that will be offered for 3 weeks in July.  These one hour long sessions will include progressions that will continue to be tailored to your needs.  Measurements will be documented and a detailed analysis will be provided to you after our last session.  </p>
 <hr>
 <p><u></u></p><h1 style="font-weight:900;"><u>SCREENING</u></h1><p></p>
 <p><strong>On-site 1/2 hour one-on-one session: $18</strong></p>
@@ -39,12 +39,12 @@
 <h2 id="-availability-will-be-updated-here-http-www-tina-michelle-com-availability-"><strong>AVAILABILITY WILL BE UPDATED <a href="http://www.tina-michelle.com/availability">HERE</a>.</strong></h2>
 <p>Please contact me directly at tina-michelle@moveyouraxis.com with your preferred time and location.  <strong><em>On-site screenings must be reserved by Sunday, June 22nd.  Online screenings must be reserved by Tuesday, June 24th.</em></strong>  First-come, first-serve.  Tell your friends and family too so you can all take advantage of the special pricing.  Here is the link to <a href="http://www.tina-michelle.com/movebetter">share</a>. </p>
 <hr>
-<p><u></u></p><h1 style="font-weight:900;"><u>“MOVE BETTER” PACKAGES</u></h1><p></p>
+<p><u></u></p><h1 style="font-weight:900;"><u>“MOVE BETTER” PROGRAM</u></h1><p></p>
 <h4 id="-3-on-site-semi-private-sessions-2-5-people-120-per-person-40-per-session-"><strong>3 ON-SITE SEMI-PRIVATE SESSIONS (2 – 5 people): $120 per person ($40 per session)</strong></h4>
 <h4 id="__-3-online-one-on-one-sessions-90-per-person-30-per-session-__"><strong>*3 ONLINE ONE-ON-ONE SESSIONS: $90 per person ($30 per session)</strong></h4>
 <h4 id="__-1-online-one-on-one-session-40__"><strong>*1 ONLINE ONE-ON-ONE SESSION: $40</strong></h4>
-<p><strong><em>*Note: For those who wish to train online, please indicate whether you have access to any of the following equipment: foam roller, tennis or lacrosse ball, theraband, the stick, stability ball, medicine ball (weight?), dumbbell (weight?), kettlebell (weight?).  This equipment is not required.</em></strong></p>
-<p><strong><em>*Note: For those who wish to train on-site and do not have a group formed, please indicate your preferred time and location and I will help you form a group</em></strong></p>
+<p><strong><em>*Note: For those who wish to train online, please indicate whether you have access to any of the following equipment: foam roller, tennis or lacrosse ball, theraband, the stick, stability ball, medicine ball (weight?), dumbbell (weight?), kettlebell (weight?).  <u>This equipment is not required.</u></em></strong></p>
+<p><strong><em>*Note: For those who wish to train on-site and do not yet have a group in mind, please indicate this, along with your preferred times and locations.  Select as many times and locations as you can and I’ll do my best to coordinate schedules.</em></strong></p>
 <p><u><b>AVAILABILITY (ON-SITE):</b></u></p>
 <h4 id="flamencura-music-dance-7113-burnet-road-111-austin-tx-78757-">Flamencura Music &amp; Dance (7113 Burnet Road, #111 Austin, TX 78757)</h4>
 <p>Saturdays from 8:15 – 9:15 a.m. (July 12th, 19th, 26th)</p>
