Published by Tina M.

--- a/availability/index.html
+++ b/availability/index.html
@@ -1,10 +1,10 @@
 <html>
-<head><title>availability</title><link rel="stylesheet" type="text/css" href="https://raw.github.com/coreybutler/site-tm/master/static.css"/></head>
+<head><title>Availability</title><link rel="stylesheet" type="text/css" href="https://raw.github.com/coreybutler/site-tm/master/static.css"/></head>
 <body>
 <h1 id="available-online-only">Available Online Only</h1>
 <h2 id="-central-standard-time-">(Central Standard Time)</h2>
 <p><em>Please contact info@tina-michelle.com with your preferred time and duration.</em></p>
-<h5 id="note-dates-marked-with-are-available-for-screening-and-move-right-program">Note: Dates marked with (*) are available for Screening and Move Right Program</h5>
+<h5 id="note-dates-marked-with-are-available-for-screening-and-move-better-program">Note: Dates marked with (*) are available for Screening and Move Better Program</h5>
 <hr>
 <table>
 <thead>
