Published by Tina M.

--- a/movebetter/index.html
+++ b/movebetter/index.html
@@ -57,5 +57,9 @@
 <h4 id="thursday-july-10th-sunday-july-27th-">Thursday, July 10th - Sunday, July 27th.</h4>
 <h2 id="-availability-will-be-updated-here-http-www-tina-michelle-com-availability-"><strong>AVAILABILITY WILL BE UPDATED <a href="http://www.tina-michelle.com/availability">HERE</a>.</strong></h2>
 <p>Please contact me directly at tina-michelle@moveyouraxis.com with your preferred time and location.  <strong><em>On-site and online Move Better sessions must be reserved by Wednesday, July 2nd.</em></strong>  First-come, first-served.</p>
+<p><a href="https://www.facebook.com/tinamichellespage"><img src="http://www.underconsideration.com/brandnew/archives/facebook_logo_detail.gif" height="50"></a>
+<a href="https://twitter.com/rhythmnmovement"><img src="https://pbs.twimg.com/profile_images/2284174758/v65oai7fxn47qv9nectx.png" height="50"></a>
+<a href="https://www.linkedin.com/pub/tina-michelle-pittsley/32/731/487"><img src="http://press.linkedin.com/display-media/206/4" width="50"></a>
+<a href="https://plus.google.com/u/0/100207239079448872059/posts"><img src="https://plus.google.com/u/0/100207239079448872059/posts" height="50"></a></p>
 </body>
 </html>
