Published by Tina M.

--- a/movebetter/index.html
+++ b/movebetter/index.html
@@ -10,8 +10,7 @@
 <p><strong><em>•    What if the reason I have trouble with changing directions suddenly is because I have limited range of motion in my upper back or my ankle?</em></strong></p>
 <p><strong><em>•    Is there such thing as being too flexible?</em></strong></p>
 <p><strong><em>•    I’d like to execute a flawless pivot turn or keep up with everyone else on the basketball court.</em></strong></p>
-<p>The list of questions could go on and on.  The point is, everybody could use a movement screen - whether you are a dancer, Navy SEAL, or someone who has never been able to touch his or her toes.  </p>
-<p>Part of what I offer in my <a href="http://www.tina-michelle.com">personal training sessions</a> is a movement screen to help identify weaknesses, imbalances, asymmetries, and limitations.  For a limited time, I am offering a special.</p>
+<p>Dancers, Navy SEALs, those who have never been able to touch their toes,.. The bottom line is a movement screen is for everyone.  It is an important tool to help identify weaknesses, imbalances, asymmetries, and limitations and is part of what I offer in my <a href="http://tina-michelle.com/">personal training sessions</a>.  For a limited time, I am offering a special.  </p>
 <hr>
 <p>Here’s how it will work:</p>
 <p>1.)    We’ll assess your basic movement patterns during a half hour, one-on-one movement screening.  You’ll receive 3 progressions that you’ll be able to do on your own.  These progressions will be specific to your needs.</p>
@@ -22,7 +21,7 @@
 <p><strong>*Online 1/2 hour one-on-one session: $12</strong></p>
 <p><strong><em>*Note: Those who wish to screen online will need access to the following:</em></strong></p>
 <p>1.) Skype or Google Hangouts</p>
-<p>2.) One 4 foot dowel rod (or similar object – like a broom without the head)</p>
+<p>2.) One 4 foot dowel rod (or similar object – e.g., a broom without the head)</p>
 <p>3.) One tape measure</p>
 <p>4.) One 3 – 5 foot long string</p>
 <p>5.) One large towel</p>
