Published by Tina M.

--- a/moveyouraxisannouncement/index.html
+++ b/moveyouraxisannouncement/index.html
@@ -1,8 +1,8 @@
 <html>
 <head><title>Move Your Axis Announcement</title><link rel="stylesheet" type="text/css" href="https://raw.github.com/coreybutler/site-tm/master/static.css"/></head>
 <body>
-<h2 id="-move-your-axis-announcement-"><strong>MOVE YOUR AXIS ANNOUNCEMENT</strong></h2>
-<p>Move Your Axis needs to be on hold until further notice.  It is entirely possible that this will become permanent.  </p>
+<h2 id="-announcement-regarding-move-your-axis-and-private-dance-instruction-"><strong>ANNOUNCEMENT REGARDING MOVE YOUR AXIS AND PRIVATE DANCE INSTRUCTION</strong></h2>
+<p>Move Your Axis and private dance instruction need to be on hold until further notice.  It is entirely possible that this will become permanent.  </p>
 <p>For those of you who were unaware, I was hit by a truck last summer while I was out running and sustained head to toe injuries.  After taking a financial break, I am back to visiting with my doctors again.  We are only able to address two injuries at a time, so Right Shoulder and Right Knee volunteered.  </p>
 <p>It appears that I have a torn labrum in my shoulder and a torn meniscus in my knee.  We are in the process of determining the next steps.  One way or another, the recovery process for both types of injuries will take some time.  Since the only body part spared was my right foot, this is going to be quite a process as we work our way down the list.  </p>
 <p>I will provide an update once things become more clear.  For now, I will offer a <a href="http://tina-michelle.com/movebetter">special program</a> for anyone interested. </p>
