Published by Tina M.

--- a/announcement/index.html
+++ b/announcement/index.html
@@ -3,8 +3,7 @@
 <body>
 <h2 id="-announcement-"><strong>ANNOUNCEMENT</strong></h2>
 <p>I am currently unavailable until further notice.</p>
-<p>For those of you who were unaware, I was hit by a truck last summer while I was out running and sustained head to toe injuries.  </p>
-<p>Recovery Road is looking to be pretty long and intense since my right foot was the only spared body part.  </p>
+<p>For those of you who were unaware, I was hit by a truck last summer while I was out running and sustained head to toe injuries.  Recovery Road is looking to be pretty long and intense.  </p>
 <p>I will provide an update once things become more clear.</p>
 <p>Should you need to reach me in the meantime, please contact info@tina-michelle.com.</p>
 </body>
