Published by Tina M.

--- a/availability/index.html
+++ b/availability/index.html
@@ -4,47 +4,9 @@
 <h1 id="available-online-only">Available Online Only</h1>
 <h2 id="-central-standard-time-">(Central Standard Time)</h2>
 <p><em>Please contact info@tina-michelle.com with your preferred time and duration.</em></p>
-<hr>
-<table>
-<thead>
-<tr>
-<th style="text-align:left">Saturday, July 12, 2014</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align:left">6:30 a.m. - 9:00 a.m.</td>
-</tr>
-<tr>
-<td style="text-align:left">2:00 p.m. - 3:00 p.m.</td>
-</tr>
-</tbody>
-</table>
-<hr>
-<table>
-<thead>
-<tr>
-<th style="text-align:left">Sunday, July 13, 2014</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align:left">7:00 a.m. - 9:00 a.m.</td>
-</tr>
-</tbody>
-</table>
-<hr>
-<table>
-<thead>
-<tr>
-<th style="text-align:left">Monday, July 14, 2014</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align:left">12:00 p.m. - 3:00 p.m.</td>
-</tr>
-</tbody>
-</table>
+<p>I am currently unavailable until further notice.</p>
+<p>For those of you who were unaware, I was hit by a truck last summer while I was out running and sustained head to toe injuries. Recovery Road is looking to be pretty long and intense.</p>
+<p>I will provide an update once things become more clear.</p>
+<p>Should you need to reach me in the meantime, please contact info@tina-michelle.com.</p>
 </body>
 </html>
