Published by Tina M.

--- a/availability/index.html
+++ b/availability/index.html
@@ -1,9 +1,7 @@
 <html>
 <head><title>Availability</title><link rel="stylesheet" type="text/css" href="https://raw.github.com/coreybutler/site-tm/master/static.css"/></head>
 <body>
-<h1 id="available-online-only">Available Online Only</h1>
-<h2 id="-central-standard-time-">(Central Standard Time)</h2>
-<p><em>Please contact info@tina-michelle.com with your preferred time and duration.</em></p>
+<p>ANNOUNCEMENT:</p>
 <p>I am currently unavailable until further notice.</p>
 <p>For those of you who were unaware, I was hit by a truck last summer while I was out running and sustained head to toe injuries. Recovery Road is looking to be pretty long and intense.</p>
 <p>I will provide an update once things become more clear.</p>
